# notes21

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.agent/rules/: env.md
.agent/skills/audio_dsp_engineer/: SKILLS.md
.agent/skills/markdown_reader_writer/: SKILLS.md
.agent/skills/music_python_expert/: SKILL.md
.github/workflows/: ci.yml
docs/: 7x3_2D_vs_3D_tonal_grid_representations.md  7x3_music_representation.md  7x3_structural_and_computational_significance.md  api.md
notebooks/: test_notes21.ipynb
src/api/: app.py
src/music/: encoding.py  visualization.py
src/notes21/: __init__.py
src/notes21/api/: app.py
src/notes21/music/: core.py  visualization.py
tests/: test_api.py  test_encoding.py  test_main.py  test_music_core.py  test_visualization.py  visualize_demo.py
