[project]
name = "notes21"
version = "0.1.0"
dependencies = [
    "numpy>=1.26,<2.0",
    "matplotlib>=3.8,<4.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "httpx>=0.27,<1.0",
    "pytest-cov>=5.0,<6.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = [
    "src/notes21/music/visualization.py"
]